[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/ui_elements/task_ui_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-door-closed.png" type="Texture" id=2]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-cabinet.png" type="Texture" id=3]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-door-opened.png" type="Texture" id=4]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/cabinet-ui-door-handle.png" type="Texture" id=5]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/chemical_cabinet_ui.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
height = 92.0

[sub_resource type="CapsuleShape2D" id=2]
height = 92.0

[node name="ChemicalCabinetUi" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Cabinet" type="Sprite" parent="Control" index="0"]
texture = ExtResource( 3 )

[node name="DoorOpened" type="Sprite" parent="Control" index="1"]
visible = false
texture = ExtResource( 4 )

[node name="DoorClosed" type="Sprite" parent="Control" index="2"]
visible = false
texture = ExtResource( 2 )

[node name="HandleLeft" type="Area2D" parent="Control/DoorClosed" index="0"]
position = Vector2( -34.5, -25 )
collision_layer = 512
collision_mask = 512
gravity_vec = Vector2( 1, 1 )

[node name="HandleLeft" type="Sprite" parent="Control/DoorClosed/HandleLeft" index="0"]
position = Vector2( 0, 45 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/DoorClosed/HandleLeft" index="1"]
position = Vector2( 0, 45 )
shape = SubResource( 1 )

[node name="HandleRight" type="Area2D" parent="Control/DoorClosed" index="1"]
position = Vector2( 31.5, -25 )
collision_layer = 512
collision_mask = 512

[node name="HandleRight" type="Sprite" parent="Control/DoorClosed/HandleRight" index="0"]
position = Vector2( 0, 45 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/DoorClosed/HandleRight" index="1"]
position = Vector2( 0, 45 )
shape = SubResource( 2 )

[connection signal="input_event" from="Control/DoorClosed/HandleLeft" to="." method="_on_HandleLeft_input_event"]
[connection signal="mouse_entered" from="Control/DoorClosed/HandleLeft" to="." method="_on_HandleLeft_mouse_entered"]
[connection signal="mouse_exited" from="Control/DoorClosed/HandleLeft" to="." method="_on_HandleLeft_mouse_exited"]
[connection signal="input_event" from="Control/DoorClosed/HandleRight" to="." method="_on_HandleRight_input_event"]
[connection signal="mouse_entered" from="Control/DoorClosed/HandleRight" to="." method="_on_HandleRight_mouse_entered"]
[connection signal="mouse_exited" from="Control/DoorClosed/HandleRight" to="." method="_on_HandleRight_mouse_exited"]
